syntax = "proto3";

option java_multiple_files = true;
option java_generate_equals_and_hash = true;
option java_package = "io.net.api.command";
option java_outer_classname = "CommandProto";

package proto.command;

service GroupCmdService {
  rpc invoke (GroupCmd) returns (MsgResult) {}
}

message GroupCmd {
  uint64 groupId = 1;
  uint64 botId = 2;
  uint64 senderId = 3;
  string cmd = 4;
  repeated string args = 5;
}

message MsgResult {
  string msg = 1;
  bytes bytes = 2;
}